--- a/config/helix.conf
+++ b/config/helix.conf
@@ -6,6 +6,7 @@
 # CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 
 # Deep Sleep after 15min of inactivity
 CONFIG_ZMK_SLEEP=y
