--- a/config/helix.conf
+++ b/config/helix.conf
@@ -7,6 +7,7 @@
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 # Deep Sleep after 15min of inactivity
 CONFIG_ZMK_SLEEP=y
